tests/rename/should_compile/T25984a_helper.hs
module T25984a_helper where

data H = A | B   -- no C
