tests/rename/should_fail/T23982_aux.hs

module T23982_aux where

data A = A
